# yandex_algorithms_2023

./: .gitignore  pyproject.toml
202302_0/: bestteamsum.py  group_words.py  groupwords_broken.py  isleflood.py  prefixsumsOn.py  rle.py  rle_simple.py
2023_3_0/: 10_boring_lecture.py  11_protected_stack.py  12_bracket_sequence.py  13_postfix_entry.py  14_sorting_wagon.py  15_the_great_lineland_migration.py  16_protected_queue.py  17_the_drunkards_Game.py  18_protected_deque.py  19_to_heap.py  1_histogram.py  2_beautiful_string.py  3_collector_diego.py  4_control_work.py  5_good_string.py  6_operating_systems_lite.py  7_SNTP.py  8_minimum_rectangle.py  9_sum_in_rectangle.py
